--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,46 +1,45 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Site Abel Coelho</title>
-    <link rel="stylesheet" href="/CSS/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
+  <body>
     <header>
-        <div class="home-page">
-            <div class="home-page2">
-              <nav>
-                <a href="#">
-                 <img src="logo abel.webp" alt="" width="80">
-                </a>
-                <ul class="navbar-items">
-                  <li>
-                    <a href="escola.html">Escola</a>
-                  </li>
-                  <li>
-                    <a href="notícias.html">Notícias</a>
-                  </li>
-                  <li>
-                    <a href="horarios.html">Horários</a>
-                  </li>
-                  <li>
-                    <a href="calculadora.html">Calculadora</a>
-                  </li><li>
-                    <a href="login.html">Login</a>
-                  </li>
-                    <a href="curso.html" class="default-btn">Curso Técnico</a>
-                  </li>
-                </ul>
-              </nav>
-            </div>
-            <main>
-            </main>
-            <footer>
-            </footer>
-          </div>
-        </body>
-      </html>
+      <div class="main-menu">
+        <nav>
+          <ul class="navbar-items">
+            <li>
+              <a>
+                <img
+                src="/img/logo abel.webp"
+                alt="Logo da Escola Estadual Prof. Abel Freire Coelho"
+                width="80">
+              </a>
+            </li>
+            <li>
+              <a href="school.html" class="link-nav">Escola</a>
+            </li>
+            <li>
+              <a href="news.html" class="link-nav">Notícias</a>
+            </li>
+            <li>
+              <a href="schedules.html" class="link-nav">Horários</a>
+            </li>
+            <li>
+              <a href="login.html" class="link-nav">Login</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
-</body>
+    <section>
+
+    </section>
+    <footer>
+
+    </footer>
+  </body>
 </html>
