--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,32 +8,35 @@
   </head>
   <body>
     <header>
-      <div class="main-menu">
-        <nav>
-          <ul class="navbar-items">
-            <li>
-              <a>
-                <img
-                src="/img/logo abel.webp"
-                alt="Logo da Escola Estadual Prof. Abel Freire Coelho"
-                width="80">
+      <body>
+        <div class="container">
+          <div class="navbar-container">
+            <nav>
+              <a href="#">
+                <img src="/img/logo abel.png" alt="Logo Abel Coelho" class="logo" />
               </a>
-            </li>
-            <li>
-              <a href="school.html" class="link-nav">Escola</a>
-            </li>
-            <li>
-              <a href="news.html" class="link-nav">Notícias</a>
-            </li>
-            <li>
-              <a href="schedules.html" class="link-nav">Horários</a>
-            </li>
-            <li>
-              <a href="login.html" class="link-nav">Login</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
+              <ul class="navbar-items">
+                <li>
+                  <a href="school.html">ESCOLA</a>
+                </li>
+                <li>
+                  <a href="news.html">NOTÍCIAS</a>
+                </li>
+                <li>
+                  <a href="schedules.html">HORÁRIOS</a>
+                </li>
+                <li>
+                  <a href="tecnico.html">TÉCNICO</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+    
+          <main>
+            <div class="main-banner">
+              <h1>E. E. Prof. Abel Freire Coelho</h1>
+              <p>A melhor escola de Mossóro!</p>
+            </div>
     </header>
     <section>
 
