--- a/html/schedules.html
+++ b/html/schedules.html
@@ -7,6 +7,42 @@
     <link rel="stylesheet" href="/css/style.css" />
 </head>
 <body>
-    
+  <header>
+    <body>
+      <div class="container">
+        <div class="navbar-container">
+          <nav>
+            <a href="#">
+              <img src="/img/logo abel.png" alt="Logo Abel Coelho" class="logo" />
+            </a>
+            <ul class="navbar-items">
+              <li>
+                <a href="#">ESCOLA</a>
+              </li>
+              <li>
+                <a href="#">NOTÍCIAS</a>
+              </li>
+              <li>
+                <a href="#">HORÁRIOS</a>
+              </li>
+              <li>
+                <a href="#" class="default-btn">TÉCNICO</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+  
+        <main>
+          <div class="main-banner">
+            <h1>E. E. Prof. Abel Freire Coelho</h1>
+            <p>A melhor escola de Mossóro!</p>
+          </div>
+  </header>
+  <section>
+
+  </section>
+  <footer>
+
+  </footer>
 </body>
 </html>
