--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,11 +8,10 @@
   </head>
   <body>
     <header>
-      <body>
         <div class="container">
           <div class="navbar-container">
             <nav>
-              <a href="#">
+              <a href="index.html">
                 <img src="/img/logo abel.png" alt="Logo Abel Coelho" class="logo" />
               </a>
               <ul class="navbar-items">
@@ -28,21 +27,29 @@
                 <li>
                   <a href="tecnico.html">TÉCNICO</a>
                 </li>
+                <li>
+                  <p> | </p>
+                </li>
+                <li>
+                  <a href="https://sigeduc.rn.gov.br/sigeduc/verTelaLogin.do" class="a1">LOGIN</a>
+                </li>
               </ul>
             </nav>
           </div>
-    
+        </div>
+    </header>
           <main>
             <div class="main-banner">
-              <h1>E. E. Prof. Abel Freire Coelho</h1>
-              <p>A melhor escola de Mossóro!</p>
             </div>
-    </header>
+            <div class="news">
+              <p>ÚLTIMAS NOTÍCIAS</p>
+            </div>
+            <div></div>
+          </main>
+    
     <section>
-
     </section>
     <footer>
-
     </footer>
   </body>
 </html>
