--- a/html/schedules.html
+++ b/html/schedules.html
@@ -8,35 +8,35 @@
 </head>
 <body>
   <header>
-    <body>
-      <div class="container">
-        <div class="navbar-container">
-          <nav>
-            <a href="#">
-              <img src="/img/logo abel.png" alt="Logo Abel Coelho" class="logo" />
-            </a>
-            <ul class="navbar-items">
-              <li>
-                <a href="#">ESCOLA</a>
-              </li>
-              <li>
-                <a href="#">NOTÍCIAS</a>
-              </li>
-              <li>
-                <a href="#">HORÁRIOS</a>
-              </li>
-              <li>
-                <a href="#" class="default-btn">TÉCNICO</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-  
-        <main>
-          <div class="main-banner">
-            <h1>E. E. Prof. Abel Freire Coelho</h1>
-            <p>A melhor escola de Mossóro!</p>
-          </div>
+    <div class="container">
+      <div class="navbar-container">
+        <nav>
+          <a href="index.html">
+            <img src="/img/logo abel.png" alt="Logo Abel Coelho" class="logo" />
+          </a>
+          <ul class="navbar-items">
+            <li>
+              <a href="school.html">ESCOLA</a>
+            </li>
+            <li>
+              <a href="news.html">NOTÍCIAS</a>
+            </li>
+            <li>
+              <a href="schedules.html">HORÁRIOS</a>
+            </li>
+            <li>
+              <a href="tecnico.html">TÉCNICO</a>
+            </li>
+            <li>
+              <p> | </p>
+            </li>
+            <li>
+              <a href="https://sigeduc.rn.gov.br/sigeduc/verTelaLogin.do" class="a1">LOGIN</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
   </header>
   <section>
 
