--- a/HTML/index.html
+++ b/HTML/index.html
@@ -38,18 +38,41 @@
           </div>
         </div>
     </header>
-          <main>
-            <div class="main-banner">
-            </div>
-            <div class="news">
-              <p>ÚLTIMAS NOTÍCIAS</p>
-            </div>
-            <div></div>
-          </main>
+
+    <main>
+      <div class="slider">
+        <div class="slides">
+          <input type="radio" name="radio-btn" id="radio1">
+          <input type="radio" name="radio-btn" id="radio2">
+          <input type="radio" name="radio-btn" id="radio3">
+          <input type="radio" name="radio-btn" id="radio4">
+
+          <div class="slide first">
+            <img src="/img/banner 1.jpg" alt="Imagem 1">
+          </div>
+
+          <div class="slide">
+            <img src="/img/banner 2.jpg" alt="Imagem 2">
+          </div>
+
+          <div class="slide">
+            <img src="/img/banner 3.jpg" alt="Imagem 3">
+          </div>
+
+          <div class="slide">
+            <img src="/img/banner 4.jpg" alt="Imagem 4">
+          </div>
+      </div>
+
+      <div class="news">
+      </div>
+    </main>
     
     <section>
     </section>
     <footer>
     </footer>
+
+    <script src="/js/script.js"></script>
   </body>
 </html>
