--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Site Abel Coelho</title>
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="shortcut icon" href="/img/logo abel.png" type="image/x-icon">
   </head>
   <body>
     <header>
@@ -63,14 +64,54 @@
             <img src="/img/banner 4.jpg" alt="Imagem 4">
           </div>
       </div>
-
-      <div class="news">
-      </div>
     </main>
-    
     <section>
+      <div class="news">
+        <p class="title-news">ÚLTIMAS NOTÍCIAS</p>
+        <ul class="news-list">
+          <li class="news-item">
+            <a href="news1.html">
+              <h3>Notícia 1</h3>
+              <p>Resumo da notícia 1</p>
+            </a>
+          </li>
+          <li class="news-item">
+            <a href="news2.html">
+              <h3>Notícia 2</h3>
+              <p>Resumo da notícia 2</p>
+            </a>
+          </li>
+          <li class="news-item">
+            <a href="news3.html">
+              <h3>Notícia 3</h3>
+              <p>Resumo da notícia 3</p>
+            </a>
+          </li>
+          <li class="news-item">
+            <a href="news4.html">
+              <h3>Notícia 4</h3>
+              <p>Resumo da notícia 4</p>
+            </a>
+          </li>
+          <li class="news-item">
+            <a href="news5.html">
+              <h3>Notícia 5</h3>
+              <p>Resumo da notícia 5</p>
+            </a>
+          </li>
+          <li class="news-item">
+            <a href="news6.html">
+              <h3>Notícia 6</h3>
+              <p>Resumo da notícia 6</p>
+            </a>
+          </li>
+        </ul>
+      </div>
     </section>
     <footer>
+      <div class="contact">
+
+      </div>
     </footer>
 
     <script src="/js/script.js"></script>
