--- a/html/school.html
+++ b/html/school.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Escola</title>
+    <title>Site Abel Coelho</title>
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="shortcut icon" href="/img/logo abel.png" type="image/x-icon">
 </head>
 <body>
   <header>
