--- a/HTML/index.html
+++ b/HTML/index.html
@@ -108,11 +108,37 @@
         </ul>
       </div>
     </section>
-    <footer>
-      <div class="contact">
-
+    
+    <footer class="rodape" id="contato">
+      <div class="rodape-div">
+  
+          <div class="rodape-div-1">
+              <div class="rodape-div-1-coluna">
+                  <h3>Endereço</h3>
+                  <p>R. Dr. João Marcelino, s/n - Nova Betânia, Mossoró - RN, 59612-200</p>
+              </div>
+          </div>
+  
+          <div class="rodape-div-2">
+              <div class="rodape-div-2-coluna">
+                  <h3>Contatos</h3>
+                  <p>direabel@yahoo.com.br</p>
+                  <p>(84) 3315-5658</p>
+              </div>
+          </div>
+  
+          <div class="rodape-div-3">
+              <div class="rodape-div-3-coluna">
+                  <h3>Links</h3>
+                  <p><a href="school.html">Escola</a></p>
+                  <p><a href="news.html">Notícias</a></p>
+                  <p><a href="schedules.html">Horários</a></p>
+                  <p><a href="tecnico.html">Técnico</a></p>
+              </div>
+          </div>
       </div>
-    </footer>
+      <p class="rodape-direitos">Copyright © 2024 – Todos os Direitos Reservados.</p>
+  </footer>
 
     <script src="/js/script.js"></script>
   </body>
