--- a/HTML/index.html
+++ b/HTML/index.html
@@ -67,7 +67,7 @@
     </main>
     <section>
       <div class="news">
-        <p class="title-news">ÚLTIMAS NOTÍCIAS</p>
+        <p class="title-news">ÚLTIMAS NOTÍCIAS:</p>
         <ul class="news-list">
           <li class="news-item">
             <a href="news1.html">
@@ -104,6 +104,32 @@
               <h3>Notícia 6</h3>
               <p>Resumo da notícia 6</p>
             </a>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section>
+      <div class="numbers">
+        <p class="title-numbers">NOSSOS NÚMEROS:</p>
+        <ul class="numbers-list">
+          <li class="number-item">
+              <h3><span>+1000</span> alunos</h3>
+          </li>
+          <li class="number-item">
+              <h3><span>+50</span> colaboradores</h3>
+          </li>
+          <li class="number-item">
+              <h3><span>+40</span> anos</h3>
+          </li>
+          <li class="number-item">
+              <h3><span>+1400</span> aprovados no Enem</h3>
+          </li>
+          <li class="number-item">
+              <h3><span>+100</span> vitórias no JERNS</h3>
+          </li>
+          <li class="number-item">
+              <h3><span>+25</span> salas de aula</h3>
           </li>
         </ul>
       </div>
