--- a/HTML/index.html
+++ b/HTML/index.html
@@ -17,7 +17,7 @@
               </a>
               <ul class="navbar-items">
                 <li>
-                  <a href="school.html">ESCOLA</a>
+                  <a href="index.html">HOME</a>
                 </li>
                 <li>
                   <a href="news.html">NOTÍCIAS</a>
@@ -70,37 +70,39 @@
         <p class="title-news">ÚLTIMAS NOTÍCIAS:</p>
         <ul class="news-list">
           <li class="news-item">
-            <a href="news1.html">
-              <h3>Notícia 1</h3>
-              <p>Resumo da notícia 1</p>
+            <a href="./newspaper/news1.html">
+              <h3>Matrículas Abertas!</h3>
+              <p>Iniciado o período de matrículas, clique para saber mais.</p>
             </a>
           </li>
+          
           <li class="news-item">
-            <a href="news2.html">
-              <h3>Notícia 2</h3>
-              <p>Resumo da notícia 2</p>
+            <a href="/html/newspaper/news2.html">
+              <h3>Fechamento do 4° bimestre!</h3>
+              <p>Informações sobre o fechamento o 4° bimestre, clique para ver.</p>
             </a>
           </li>
+
           <li class="news-item">
-            <a href="news3.html">
+            <a href="">
               <h3>Notícia 3</h3>
               <p>Resumo da notícia 3</p>
             </a>
           </li>
           <li class="news-item">
-            <a href="news4.html">
+            <a href="">
               <h3>Notícia 4</h3>
               <p>Resumo da notícia 4</p>
             </a>
           </li>
           <li class="news-item">
-            <a href="news5.html">
+            <a href="">
               <h3>Notícia 5</h3>
               <p>Resumo da notícia 5</p>
             </a>
           </li>
           <li class="news-item">
-            <a href="news6.html">
+            <a href="">
               <h3>Notícia 6</h3>
               <p>Resumo da notícia 6</p>
             </a>
@@ -134,20 +136,43 @@
         </ul>
       </div>
     </section>
+
+    <section>
+      <div class="history">
+        <p class="title-history">NOSSA HISTÓRIA E MISSÃO:</p>
+        <p class="our-history1">A Escola Estadual Professor Abel Freire Coelho, criada pelo PROGRAMA DE EXPANSÃO DO ENSINO MÉDIO – PREMEM, fruto da parceria entre o Ministério da Educação e Cultura, Governo do Estado do Rio Grande do Norte e Secretaria de Educação, Cultura e Desportos. Inaugurada em 20 de agosto de 1979, a escola recebeu autoridades locais, professores, alunos e membros da comunidade para a solenidade oficial, presidida pelo governador Dr. Lavoisier Maia Sobrinho e pelo secretário de Educação e Cultura, professor Luiz Eduardo Carneiro Costa.
+        </p>
+
+        <p class="our-history2">A Escola Estadual Professor Abel Freire Coelho tem como missão proporcionar um ensino de qualidade, adotando metodologias inovadoras que integram os eixos de ciência, trabalho, tecnologia e cultura. Nosso foco está no jovem como protagonista do Ensino Médio, garantindo o exercício da cidadania, inserção no mundo do trabalho e promoção do bem-estar. Junte-se a nós nessa jornada educacional!</p>
+      </div>
+    </section>
+
+    <section>
+      <div class="provide">
+        <p class="title-provide">O QUE OFERECEMOS:</p>
+        <ul class="we-provide">
+          <li>* Ensino Médio | 1ª à 3ª Série *</li>
+          <li>Matutino: 7:00h às 12:20h - Vespertino: 13:00h às 18:20h</li>
+          <hr>
+          <li>* Curso Técnico em Informática (integrado ao EM) *</li>
+          <li>Vespertino: 13:00h às 18:20h</li>
+        </ul>
+      </div>
+    </section>
     
     <footer class="rodape" id="contato">
       <div class="rodape-div">
   
           <div class="rodape-div-1">
               <div class="rodape-div-1-coluna">
-                  <h3>Endereço</h3>
+                  <h3>Endereço:</h3>
                   <p>R. Dr. João Marcelino, s/n - Nova Betânia, Mossoró - RN, 59612-200</p>
               </div>
           </div>
   
           <div class="rodape-div-2">
               <div class="rodape-div-2-coluna">
-                  <h3>Contatos</h3>
+                  <h3>Contatos:</h3>
                   <p>direabel@yahoo.com.br</p>
                   <p>(84) 3315-5658</p>
               </div>
@@ -155,8 +180,8 @@
   
           <div class="rodape-div-3">
               <div class="rodape-div-3-coluna">
-                  <h3>Links</h3>
-                  <p><a href="school.html">Escola</a></p>
+                  <h3>Links:</h3>
+                  <p><a href="index.html">Menu</a></p>
                   <p><a href="news.html">Notícias</a></p>
                   <p><a href="schedules.html">Horários</a></p>
                   <p><a href="tecnico.html">Técnico</a></p>
