--- a/html/news.html
+++ b/html/news.html
@@ -17,7 +17,7 @@
           </a>
           <ul class="navbar-items">
             <li>
-              <a href="school.html">ESCOLA</a>
+              <a href="index.html">HOME</a>
             </li>
             <li>
               <a href="news.html">NOTÍCIAS</a>
@@ -40,7 +40,6 @@
     </div>
   </header>
   <section>
-
   </section>
   <footer>
 
