--- a/html/schedules.html
+++ b/html/schedules.html
@@ -17,7 +17,7 @@
           </a>
           <ul class="navbar-items">
             <li>
-              <a href="school.html">ESCOLA</a>
+              <a href="index.html">HOME</a>
             </li>
             <li>
               <a href="news.html">NOTÍCIAS</a>
@@ -40,10 +40,11 @@
     </div>
   </header>
   <section>
-
+    <div class="aviso-horarios">
+      <p class="aviso1">OS HORÁRIOS DE 2024 AINDA NÃO ESTÃO DISPONÍVEIS!</p>
+    </div>
   </section>
-  <footer>
-
+  <footer class="rodape" id="contato">
   </footer>
 
   <script src="/js/script.js"></script>
