--- a/HTML/index.html
+++ b/HTML/index.html
@@ -20,13 +20,13 @@
                   <a href="index.html">HOME</a>
                 </li>
                 <li>
-                  <a href="news.html">NOTÍCIAS</a>
+                  <a href="index.html#news1">NOTÍCIAS</a>
                 </li>
                 <li>
-                  <a href="schedules.html">HORÁRIOS</a>
+                  <a href="index.html#schedules1">HORÁRIOS</a>
                 </li>
                 <li>
-                  <a href="tecnico.html">TÉCNICO</a>
+                  <a href="index.html#technician1">TÉCNICO</a>
                 </li>
                 <li>
                   <p> | </p>
@@ -65,8 +65,9 @@
           </div>
       </div>
     </main>
+
     <section>
-      <div class="news">
+      <div class="news" id="news1">
         <p class="title-news">ÚLTIMAS NOTÍCIAS:</p>
         <ul class="news-list">
           <li class="news-item">
@@ -89,18 +90,21 @@
               <p>Resumo da notícia 3</p>
             </a>
           </li>
+
           <li class="news-item">
             <a href="">
               <h3>Notícia 4</h3>
               <p>Resumo da notícia 4</p>
             </a>
           </li>
+
           <li class="news-item">
             <a href="">
               <h3>Notícia 5</h3>
               <p>Resumo da notícia 5</p>
             </a>
           </li>
+          
           <li class="news-item">
             <a href="">
               <h3>Notícia 6</h3>
@@ -159,6 +163,32 @@
         </ul>
       </div>
     </section>
+
+    <section>
+      <div class="schedules" id="schedules1">
+        <p class="title-schedules">HORÁRIOS DE AULA:</p>
+        <p class="our-schedules">OS HORÁRIOS DE 2024 AINDA NÃO ESTÃO DISPONÍVEIS!</p>
+      </div>
+    </section>
+
+    <section>
+      <div class="technician" id="technician1">
+        <p class="title-technician">CURSO TÉCNICO EM INFORMÁTICA:</p>
+        <p class="our-technician">O curso técnico em informática é uma formação profissionalizante que habilita o aluno a atuar na área de tecnologia da informação, desenvolvendo, instalando e mantendo sistemas e redes de computadores, aplicativos e websites. O curso é integrado ao ensino médio e é composto por disciplinas teóricas e práticas que abordam temas como:</p>
+
+          <ul class="our-technician-li">
+            <li>Manutenção de computadores</li>
+            <li>Lógica e linguagens de programação</li>
+            <li>Redes de computadores</li>
+            <li>Interpretação de especificações computacionais</li>
+            <li>Sistemas operacionais</li>
+            <li>Arquitetura de computadores</li>
+          </ul>
+
+          <p class="our-technician">Um profissional da área de informática pode trabalhar em diversos setores, como empresas de serviços em computadores, assistência técnica, centros públicos de acesso à internet, desenvolvimento de jogos digitais, automação industrial, segurança da informação, entre outros.</p>
+
+      </div>
+    </section>
     
     <footer class="rodape" id="contato">
       <div class="rodape-div">
@@ -182,9 +212,9 @@
               <div class="rodape-div-3-coluna">
                   <h3>Links:</h3>
                   <p><a href="index.html">Menu</a></p>
-                  <p><a href="news.html">Notícias</a></p>
-                  <p><a href="schedules.html">Horários</a></p>
-                  <p><a href="tecnico.html">Técnico</a></p>
+                  <p><a href="index.html#news1">Notícias</a></p>
+                  <p><a href="index.html#schedules1">Horários</a></p>
+                  <p><a href="index.html#technician1">Técnico</a></p>
               </div>
           </div>
       </div>
