--- a/html/newspaper/news1.html
+++ b/html/newspaper/news1.html
@@ -20,13 +20,13 @@
                   <a href="/html/index.html">HOME</a>
                 </li>
                 <li>
-                  <a href="/html/news.html">NOTÍCIAS</a>
+                  <a href="/html/index.html#news1">NOTÍCIAS</a>
                 </li>
                 <li>
-                  <a href="/html/schedules.html">HORÁRIOS</a>
+                  <a href="/html/index.html#schedules1">HORÁRIOS</a>
                 </li>
                 <li>
-                  <a href="/html/tecnico.html">TÉCNICO</a>
+                  <a href="/html/index.html#technician1">TÉCNICO</a>
                 </li>
                 <li>
                   <p> | </p>
