--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,10 +10,10 @@
   <body>
     <header>
         <div class="container">
-          <div class="navbar-container">
+          <div id="navbar-container">
             <nav>
               <a href="index.html">
-                <img src="/img/logo abel.png" alt="Logo Abel Coelho" class="logo" />
+                <img src="/img/logo abel.png" alt="Logo Abel Coelho" id="logo" />
               </a>
               <ul class="navbar-items">
                 <li>
@@ -32,7 +32,7 @@
                   <p> | </p>
                 </li>
                 <li>
-                  <a href="https://sigeduc.rn.gov.br/sigeduc/verTelaLogin.do" class="a1">LOGIN</a>
+                  <a href="https://sigeduc.rn.gov.br/sigeduc/verTelaLogin.do" id="login1">LOGIN</a>
                 </li>
               </ul>
             </nav>
