--- a/HTML/index.html
+++ b/HTML/index.html
@@ -72,26 +72,26 @@
         <ul class="news-list">
           <li class="news-item">
             <a href="./newspaper/news1.html">
-              <h3>Matrículas Abertas!</h3>
+              <h3>Matrículas abertas</h3>
               <p>Iniciado o período de matrículas, clique para saber mais.</p>
             </a>
           </li>
           
           <li class="news-item">
             <a href="/html/newspaper/news2.html">
-              <h3>Fechamento do 4° bimestre!</h3>
-              <p>Informações sobre o fechamento o 4° bimestre, clique para ver.</p>
+              <h3>Informe da biblioteca</h3>
+              <p>Atenção para o informe da biblioteca, clique para ver.</p>
             </a>
           </li>
 
           <li class="news-item">
             <a href="">
-              <h3>Notícia 3</h3>
-              <p>Resumo da notícia 3</p>
+              <h3>Pet Solidário</h3>
+              <p>Informações sobre a arrecadação, clique para ver.</p>
             </a>
           </li>
 
-          <li class="news-item">
+          <!--<li class="news-item">
             <a href="">
               <h3>Notícia 4</h3>
               <p>Resumo da notícia 4</p>
@@ -109,7 +109,7 @@
             <a href="">
               <h3>Notícia 6</h3>
               <p>Resumo da notícia 6</p>
-            </a>
+            </a> -->
           </li>
         </ul>
       </div>
