--- a/html/newspaper/news3.html
+++ b/html/newspaper/news3.html
@@ -37,7 +37,7 @@
     </div>
   </header>
   <main>
-    <p class="title-news">Informações sobre a arrecadação do Pet Solidário:</p>
+    <p class="title-news">Informações sobre as matrículas:</p>
   </main>
 </body>
 </html>
