--- a/HTML/index.html
+++ b/HTML/index.html
@@ -29,9 +29,6 @@
                   <a href="index.html#technician1">TÉCNICO</a>
                 </li>
                 <li>
-                  <p> | </p>
-                </li>
-                <li>
                   <a href="https://sigeduc.rn.gov.br/sigeduc/verTelaLogin.do" id="login1">LOGIN</a>
                 </li>
               </ul>
@@ -71,7 +68,7 @@
         <p class="title-news">ÚLTIMAS NOTÍCIAS:</p>
         <ul class="news-list">
           <li class="news-item">
-            <a href="./newspaper/news1.html">
+            <a href="./newspaper/news3.html">
               <h3>Matrículas abertas</h3>
               <p>Iniciado o período de matrículas, clique para saber mais.</p>
             </a>
@@ -85,7 +82,7 @@
           </li>
 
           <li class="news-item">
-            <a href="">
+            <a href="/html/newspaper/news1.html">
               <h3>Pet Solidário</h3>
               <p>Informações sobre a arrecadação, clique para ver.</p>
             </a>
@@ -187,6 +184,7 @@
 
           <p class="our-technician">Um profissional da área de informática pode trabalhar em diversos setores, como empresas de serviços em computadores, assistência técnica, centros públicos de acesso à internet, desenvolvimento de jogos digitais, automação industrial, segurança da informação, entre outros.</p>
 
+          <a href="/pdfs/grade.curso.pdf" download="gradecurricular" class="download">clique aqui para baixar a grade curricular do curso</a>
       </div>
     </section>
     
