--- a/html/newspaper/news2.html
+++ b/html/newspaper/news2.html
@@ -8,36 +8,36 @@
     <link rel="shortcut icon" href="/img/logo abel.png" type="image/x-icon">
 </head>
 <body>
-    <header>
-        <div class="container">
-          <div id="navbar-container">
-            <nav>
-              <a href="/html/index.html">
-                <img src="/img/logo abel.png" alt="Logo Abel Coelho" id="logo" />
-              </a>
-              <ul class="navbar-items">
-                <li>
-                  <a href="/html/index.html">HOME</a>
-                </li>
-                <li>
-                  <a href="/html/index.html#news1">NOTÍCIAS</a>
-                </li>
-                <li>
-                  <a href="/html/index.html#schedules1">HORÁRIOS</a>
-                </li>
-                <li>
-                  <a href="/html/index.html#technician1">TÉCNICO</a>
-                </li>
-                <li>
-                  <p> | </p>
-                </li>
-                <li>
-                  <a href="https://sigeduc.rn.gov.br/sigeduc/verTelaLogin.do" id="login1">LOGIN</a>
-                </li>
-              </ul>
-            </nav>
-          </div>
-        </div>
-    </header>
+  <header>
+    <div class="container">
+      <div id="navbar-container">
+        <nav>
+          <a href="/html/index.html">
+            <img src="/img/logo abel.png" alt="Logo Abel Coelho" id="logo" />
+          </a>
+          <ul class="navbar-items">
+            <li>
+              <a href="/html/index.html">HOME</a>
+            </li>
+            <li>
+              <a href="/html/index.html#news1">NOTÍCIAS</a>
+            </li>
+            <li>
+              <a href="/html/index.html#schedules1">HORÁRIOS</a>
+            </li>
+            <li>
+              <a href="/html/index.html#technician1">TÉCNICO</a>
+            </li>
+            <li>
+              <a href="https://sigeduc.rn.gov.br/sigeduc/verTelaLogin.do" id="login1">LOGIN</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+  <main>
+    <p class="title-news">Informe da biblioteca:</p>
+  </main>
 </body>
 </html>
