--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Site Abel Coelho</title>
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="shortcut icon" href="/img/logo abel.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="logo abel.png" type="image/x-icon">
   </head>
   <body>
     <header>
             <nav>
               <a href="index.html">
-                <img src="/img/logo abel.png" alt="Logo Abel Coelho" id="logo" />
+                <img src="logo abel.png" alt="Logo Abel Coelho" id="logo" />
               </a>
               <ul class="navbar-items">
                 <li>
@@ -42,19 +42,19 @@
           <input type="radio" name="radio-btn" id="radio4">
 
           <div class="slide first">
-            <img src="/img/banner 1.jpg" alt="Imagem 1">
+            <img src="banner 1.jpg" alt="Imagem 1">
           </div>
 
           <div class="slide">
-            <img src="/img/banner 2.jpg" alt="Imagem 2">
+            <img src="banner 2.jpg" alt="Imagem 2">
           </div>
 
           <div class="slide">
-            <img src="/img/banner 3.jpg" alt="Imagem 3">
+            <img src="banner 3.jpg" alt="Imagem 3">
           </div>
 
           <div class="slide">
-            <img src="/img/banner 4.jpg" alt="Imagem 4">
+            <img src="banner 4.jpg" alt="Imagem 4">
           </div>
       </div>
     </main>
@@ -64,21 +64,21 @@
         <p class="title-news">ÚLTIMAS NOTÍCIAS:</p>
         <ul class="news-list">
           <li class="news-item">
-            <a href="./newspaper/news3.html">
+            <a href="/pdfs/news 3.pdf" target="_blank">
               <h3>Matrículas abertas</h3>
               <p>Iniciado o período de matrículas, clique para saber mais.</p>
             </a>
           </li>
           
           <li class="news-item">
-            <a href="/html/newspaper/news2.html">
+            <a href="/pdfs/news 2.pdf" target="_blank">
               <h3>Informe da biblioteca</h3>
               <p>Atenção para o informe da biblioteca, clique para ver.</p>
             </a>
           </li>
 
           <li class="news-item">
-            <a href="/html/newspaper/news1.html">
+            <a href="/pdfs/news 1.pdf" target="_blank">
               <h3>Pet Solidário</h3>
               <p>Informações sobre a arrecadação, clique para ver.</p>
             </a>
@@ -160,7 +160,7 @@
     <section>
       <div class="schedules" id="schedules1">
         <p class="title-schedules">HORÁRIOS DE AULA:</p>
-        <p class="our-schedules">OS HORÁRIOS DE 2024 AINDA NÃO ESTÃO DISPONÍVEIS!</p>
+        <p class="our-schedules">*OS HORÁRIOS DE 2024 AINDA NÃO ESTÃO DISPONÍVEIS*</p>
       </div>
     </section>
 
@@ -180,7 +180,9 @@
 
           <p class="our-technician">Um profissional da área de informática pode trabalhar em diversos setores, como empresas de serviços em computadores, assistência técnica, centros públicos de acesso à internet, desenvolvimento de jogos digitais, automação industrial, segurança da informação, entre outros.</p>
 
-          <a href="/pdfs/grade.curso.pdf" download="gradecurricular" class="download">clique aqui para baixar a grade curricular do curso</a>
+          <p class="download">
+            <a href="/pdfs/grade.curso.pdf" download="gradecurricular">clique aqui para baixar a grade curricular do curso</a>
+          </p>
       </div>
     </section>
     
@@ -215,6 +217,6 @@
       <p class="rodape-direitos">Copyright © 2024 – Todos os Direitos Reservados.</p>
     </footer>
 
-    <script src="/js/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
