--- a/extra.html
+++ b/extra.html
@@ -37,7 +37,7 @@
     </div>
   </header>
   <main>
-    <p class="title-news">Informações sobre a arrecadação do Pet Solidário:</p>
+    <p class="title-news">PÁGINA EXTRA</p>
   </main>
 </body>
 </html>
