--- a/index.html
+++ b/index.html
@@ -64,21 +64,21 @@
         <p class="title-news">ÚLTIMAS NOTÍCIAS:</p>
         <ul class="news-list">
           <li class="news-item">
-            <a href="/pdfs/news 3.pdf" target="_blank">
+            <a href="news 3.pdf" target="_blank">
               <h3>Matrículas abertas</h3>
               <p>Iniciado o período de matrículas, clique para saber mais.</p>
             </a>
           </li>
           
           <li class="news-item">
-            <a href="/pdfs/news 2.pdf" target="_blank">
+            <a href="news 2.pdf" target="_blank">
               <h3>Informe da biblioteca</h3>
               <p>Atenção para o informe da biblioteca, clique para ver.</p>
             </a>
           </li>
 
           <li class="news-item">
-            <a href="/pdfs/news 1.pdf" target="_blank">
+            <a href="news 1.pdf" target="_blank">
               <h3>Pet Solidário</h3>
               <p>Informações sobre a arrecadação, clique para ver.</p>
             </a>
@@ -181,7 +181,7 @@
           <p class="our-technician">Um profissional da área de informática pode trabalhar em diversos setores, como empresas de serviços em computadores, assistência técnica, centros públicos de acesso à internet, desenvolvimento de jogos digitais, automação industrial, segurança da informação, entre outros.</p>
 
           <p class="download">
-            <a href="/pdfs/grade.curso.pdf" download="gradecurricular">clique aqui para baixar a grade curricular do curso</a>
+            <a href="grade.curso.pdf" download="gradecurricular">clique aqui para baixar a grade curricular do curso</a>
           </p>
       </div>
     </section>
