--- a/index.html
+++ b/index.html
@@ -136,11 +136,22 @@
 
     <section>
       <div class="history">
-        <p class="title-history">NOSSA HISTÓRIA E MISSÃO:</p>
+        <p class="title-history">E. E. PROF. ABEL FREIRE COELHO:</p>
         <p class="our-history1">A Escola Estadual Professor Abel Freire Coelho, criada pelo PROGRAMA DE EXPANSÃO DO ENSINO MÉDIO – PREMEM, fruto da parceria entre o Ministério da Educação e Cultura, Governo do Estado do Rio Grande do Norte e Secretaria de Educação, Cultura e Desportos. Inaugurada em 20 de agosto de 1979, a escola recebeu autoridades locais, professores, alunos e membros da comunidade para a solenidade oficial, presidida pelo governador Dr. Lavoisier Maia Sobrinho e pelo secretário de Educação e Cultura, professor Luiz Eduardo Carneiro Costa.
         </p>
 
         <p class="our-history2">A Escola Estadual Professor Abel Freire Coelho tem como missão proporcionar um ensino de qualidade, adotando metodologias inovadoras que integram os eixos de ciência, trabalho, tecnologia e cultura. Nosso foco está no jovem como protagonista do Ensino Médio, garantindo o exercício da cidadania, inserção no mundo do trabalho e promoção do bem-estar. Junte-se a nós nessa jornada educacional!</p>
+      </div>
+
+      <div class="information">
+
+        <p class="information-p">NOSSA LOCALIZAÇÃO:</p>
+
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1670.6613522505918!2d-37.35326753309711!3d-5.179851691511255!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ba06e0a1aafa79%3A0x42eb181f7296fef9!2sEscola%20Estadual%20Professor%20Abel%20Freire%20Coelho!5e0!3m2!1spt-BR!2sbr!4v1719767761872!5m2!1spt-BR!2sbr" width="90%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+        <p class="information-p1">NOSSAS INFORMAÇÕES PARA CONTATO:</p>
+
+        <p class="information-p">direabel@yahoo.com.br <br> <tel>(84) 3315-5658</p>
       </div>
     </section>
 
@@ -151,18 +162,18 @@
           <li>* Ensino Médio | 1ª à 3ª Série *</li>
           <li>Matutino: 7:00h às 12:20h - Vespertino: 13:00h às 18:20h</li>
           <hr>
-          <li>* Curso Técnico em Informática (integrado ao EM) *</li>
+          <li>* Curso Técnico em Informática (integrado ao Ensino Médio) *</li>
           <li>Vespertino: 13:00h às 18:20h</li>
         </ul>
       </div>
     </section>
 
-    <section>
+    <!-- <section>
       <div class="schedules" id="schedules1">
         <p class="title-schedules">HORÁRIOS DE AULA:</p>
         <p class="our-schedules">*OS HORÁRIOS DE 2024 AINDA NÃO ESTÃO DISPONÍVEIS*</p>
       </div>
-    </section>
+    </section> -->
 
     <section>
       <div class="technician" id="technician1">
