--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                   <a href="index.html#schedules1">HORÁRIOS</a>
                 </li>
                 <li>
-                  <a href="index.html#technician1">TÉCNICO</a>
+                  <a href="index.html#technician1">CURSO</a>
                 </li>
                 <li>
                   <a href="https://sigeduc.rn.gov.br/sigeduc/verTelaLogin.do" id="login1">LOGIN</a>
@@ -122,7 +122,7 @@
               <h3><span>+40</span> anos</h3>
           </li>
           <li class="number-item">
-              <h3><span>+1400</span> aprovados no Enem</h3>
+              <h3><span>+700</span> aprovados no Enem</h3>
           </li>
           <li class="number-item">
               <h3><span>+100</span> vitórias no JERNS</h3>
@@ -156,7 +156,7 @@
     </section>
 
     <section>
-      <div class="provide">
+      <div class="provide" id="schedules1">
         <p class="title-provide">O QUE OFERECEMOS:</p>
         <ul class="we-provide">
           <li>* Ensino Médio | 1ª à 3ª Série *</li>
