--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Site Abel Coelho</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="logo abel.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img logo abel 2.png" type="image/x-icon">
   </head>
   <body>
     <header>
             <nav>
               <a href="index.html">
-                <img src="logo abel.png" alt="Logo Abel Coelho" id="logo" />
+                <img src="img logo abel 1.png" alt="Logo Abel Coelho" id="logo" />
               </a>
               <ul class="navbar-items">
                 <li>
@@ -42,19 +42,19 @@
           <input type="radio" name="radio-btn" id="radio4">
 
           <div class="slide first">
-            <img src="banner 1.jpg" alt="Imagem 1">
+            <img src="img banner 1.jpg" alt="Foto do laboratório de informática secundário da Escola Estadual Professor Abel Freire Coelho.">
           </div>
 
           <div class="slide">
-            <img src="banner 2.jpg" alt="Imagem 2">
+            <img src="img banner 2.jpg" alt="Foto do laboratório de Química da Escola Estadual Professor Abel Freire Coelho.">
           </div>
 
           <div class="slide">
-            <img src="banner 3.jpg" alt="Imagem 3">
+            <img src="img banner 3.jpg" alt="Foto do refeitório da Escola Estadual Professor Abel Freire Coelho.">
           </div>
 
           <div class="slide">
-            <img src="banner 4.jpg" alt="Imagem 4">
+            <img src="img banner 4.jpg" alt="Foto do laboratório principal de informática da Escola Estadual Professor Abel Freire Coelho.">
           </div>
       </div>
     </main>
@@ -64,21 +64,21 @@
         <p class="title-news">ÚLTIMAS NOTÍCIAS:</p>
         <ul class="news-list">
           <li class="news-item">
-            <a href="news 3.pdf" target="_blank">
+            <a href="pdf news 3.pdf" target="_blank">
               <h3>Matrículas abertas</h3>
               <p>Iniciado o período de matrículas, clique para saber mais.</p>
             </a>
           </li>
           
           <li class="news-item">
-            <a href="news 2.pdf" target="_blank">
+            <a href="pdf news 2.pdf" target="_blank">
               <h3>Informe da biblioteca</h3>
               <p>Atenção para o informe da biblioteca, clique para ver.</p>
             </a>
           </li>
 
           <li class="news-item">
-            <a href="news 1.pdf" target="_blank">
+            <a href="pdf news 1.pdf" target="_blank">
               <h3>Pet Solidário</h3>
               <p>Informações sobre a arrecadação, clique para ver.</p>
             </a>
@@ -191,8 +191,8 @@
 
           <p class="our-technician">Um profissional da área de informática pode trabalhar em diversos setores, como empresas de serviços em computadores, assistência técnica, centros públicos de acesso à internet, desenvolvimento de jogos digitais, automação industrial, segurança da informação, entre outros.</p>
 
-          <p class="download">
-            <a href="grade.curso.pdf" download="gradecurricular">clique aqui para baixar a grade curricular do curso</a>
+          <p class="download1">
+            <a href="pdf grade.curso.pdf" download="gradecurricular" class="download">clique aqui para baixar a grade curricular do curso</a>
           </p>
       </div>
     </section>
@@ -221,7 +221,7 @@
                   <p><a href="index.html">Menu</a></p>
                   <p><a href="index.html#news1">Notícias</a></p>
                   <p><a href="index.html#schedules1">Horários</a></p>
-                  <p><a href="index.html#technician1">Técnico</a></p>
+                  <p><a href="index.html#technician1">Curso</a></p>
               </div>
           </div>
       </div>
