--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
               </div>
           </div>
       </div>
-      <p class="rodape-direitos">Copyright © 2024 – Todos os Direitos Reservados.</p>
+      <p class="rodape-direitos">Copyright © 2024 – Todos os Direitos Reservados</p>
     </footer>
 
     <script src="script.js"></script>
